# ayo

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  generate-wallet.js  hardhat.config.ts  main.rs  ml_scanner.py  monitoring.rs  package-lock.json  package.json  requirements.txt  run_ml_system.sh  tsconfig.json
bot/src/: index.ts
bot/src/arbitrage/: executor.ts  scanner.ts
bot/src/config/: networks.json
bot/src/utils/: gasManager.ts  logger.ts  telegram.ts
contracts/: SimpleArbitrage.sol  remappings.txt
contracts/arbitrage/: FlashLoanArbitrage.sol  MultiDexArbitrage.sol  MultiDexArbitrage.sol.broken
contracts/interfaces/: IDexRouter.sol
contracts/src/: LiquidationExecutor.sol
scripts/: deploy-simple.ts  deploy.ts  get-wallet-address.ts  simulate.ts  test-deploy.ts
src/: config.rs  database_manager.py  enhanced_providers.rs  execution_predictor.py  flashloan.rs  gas.rs  honeypot_detector.py  main.rs  ml_trainer.py  models.rs  monitor.js  pair_researcher.py  providers.rs  scanner-final.js  scanner-working.js  scanner.js  scanner.rs  terminal_scraper.py  test-connection.js  test_scanner.rs  utils.rs
src/dex/: mod.rs  sushiswap.rs  uniswap_v2.rs  uniswap_v3.rs
test/: FlashLoanArbitrage.test.ts
