[package]
name = "liquidation-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
# Ethereum interaction
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-flashbots = "0.13"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Database
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
rayon = "1.8"
dashmap = "5.5"
arc-swap = "1.6"

# MEV & optimization
revm = "3.5"
alloy-primitives = "0.6"
ruint = "1.11"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }

# Utils
hex = "0.4"
dotenv = "0.15"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Testing
mockito = "1.2"
proptest = "1.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "liquidation_benchmark"
harness = false